# WaterResourceGIS

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: development.yaml  logging.yaml  production.yaml  test.yaml
deployment/docker/: docker-compose.yml
scripts/: data_import.py  data_migration.py  generate_report.py  setup_database.py
src/: main.py
src/api/middleware/: auth.py  error_handler.py  logging.py
src/api/routes/: admin.py  analysis.py  monitoring.py  water_features.py
src/api/schemas/: analysis.py  station.py  water_feature.py
src/core/: base.py  config.py  constants.py  exceptions.py
src/modules/hydrology/: models.py
src/modules/monitoring/: models.py
src/repositories/: base_repository.py  sensor_data_repo.py  station_repo.py  water_feature_repo.py
src/services/: data_service.py  export_service.py  spatial_service.py
src/utils/: geo_utils.py  validators.py
tests/integration/: test_api.py
tests/unit/: test_analysis.py  test_hydrology.py  test_monitoring.py
