[project]
name = "water-resource-gis"
version = "0.1.0"
description = "Water Resource GIS System"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "geoalchemy2",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "shapely",
  "pyproj",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
